# CourseProj_CSE599

./: .gitignore  accuracy_check.py  evaluate.py  generate_ground_truth.py  generate_results.py  generate_sampled_data.py  main.py  prompt.py  pyproject.toml  sampling.py  vlm.py
data/: cider_results.csv  ground_truth.csv  sampled_data.csv
data/results/: keyframe_results.csv  random_12_results.csv  random_18_results.csv  random_24_results.csv  random_3_results.csv  random_6_results.csv  uniform_12_results.csv  uniform_18_results.csv  uniform_24_results.csv  uniform_3_results.csv  uniform_6_results.csv
