[project]
name = "courseproj-cse599"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scenedetect>=0.7",
    "selenium>=4.44.0",
]
